# fftw3

./: .travis-build.sh  .travis.yml  CMakeLists.txt  README.md
api/: CMakeLists.txt
cmake/: amalgamate.cmake  make_amalgamate.cmake
dft/scalar/: n.h  t.h
dft/scalar/codelets/: CMakeLists.txt  codelets.cmake
dft/simd/: codelet_forward.cmake  n1b.h  n1f.h  n2b.h  n2f.h  n2s.h  q1b.h  q1f.h  t1b.h  t1bu.h  t1f.h  t1fu.h  t2b.h  t2f.h  t3b.h  t3f.h  ts.h
genfft/: gen_hc2c.ml  gen_hc2cdft.ml  gen_hc2cdft_c.ml  gen_hc2hc.ml  gen_notw.ml  gen_notw_c.ml  gen_r2cb.ml  gen_r2cf.ml  gen_r2r.ml  gen_twiddle.ml  gen_twiddle_c.ml  gen_twidsq.ml  gen_twidsq_c.ml
kernel/: CMakeLists.txt
rdft/scalar/: hb.h  hc2cb.h  hc2cf.h  hf.h  r2cb.h  r2cbIII.h  r2cf.h  r2cfII.h  r2r.h
rdft/scalar/r2cb/: CMakeLists.txt
rdft/scalar/r2cf/: CMakeLists.txt
rdft/simd/: codelet_forward.cmake  hc2cbv.h  hc2cfv.h
